Bug 1914149 - Propagate zoom to new browsing contexts unconditionally. r=nika, a=RyanVM

Your patch looks good to me. Not sure if there's a non-racy way of
testing the internal full-zoom value here...

But in general, assuming consistent zoom lacking other sources of
information seems like the right thing to do.

I agree that eventually we want to probably move the site-specific zoom
impl into Gecko (if only because Android is also going to want that, see
bug 1547181, where I added a comment).

Co-authored-by: Nika Layzell <nika@thelayzells.com>

Differential Revision: https://phabricator.services.mozilla.com/D220277