docshell/base/CanonicalBrowsingContext.cpp
@@ -337,9 +337,11 @@ void CanonicalBrowsingContext::ReplacedBy(
   txn.SetForceDesktopViewport(GetForceDesktopViewport());
   txn.SetIsUnderHiddenEmbedderElement(GetIsUnderHiddenEmbedderElement());
 
-  // When using site-specific zoom, we let the front-end manage it, otherwise it
-  // can cause weirdness like bug 1846141.
-  if (!StaticPrefs::browser_zoom_siteSpecific()) {
+  // When using site-specific zoom, we let the frontend manage the zoom level
+  // of BFCache'd contexts. Overriding those zoom levels can cause weirdness
+  // like bug 1846141. We always copy to new contexts to avoid bug 1914149.
+  if (!aNewContext->EverAttached() ||
+      !StaticPrefs::browser_zoom_siteSpecific()) {
     txn.SetFullZoom(GetFullZoom());
     txn.SetTextZoom(GetTextZoom());
   }
